--- a/Network/.vscode/settings.json
+++ b/Network/.vscode/settings.json
@@ -1,47 +1,46 @@
 {
-    "code-runner.executorMap": {
- 
-     "javascript": "nodejs",
-     "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
-     "c": "cd $dir && gcc -g \"$fileName\" -o \"$fileNameWithoutExt\" && $dir\"$fileNameWithoutExt\"",
-     "cpp": "cd $dir && g++ -g \"$fileName\" -o \"$fileNameWithoutExt\" && $dir\"$fileNameWithoutExt\"",
-     "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
-     "php": "php",
-     "python": "python3",
-     "perl": "perl",
-     "ruby": "ruby",
-     "go": "go run",
-     "lua": "lua",
-     "groovy": "groovy",
-     "powershell": "powershell -ExecutionPolicy ByPass -File",
-     "bat": "cmd /c",
-     "shellscript": "bash",
-     "fsharp": "fsi",
-     "csharp": "scriptcs",
-     "vbscript": "cscript //Nologo",
-     "typescript": "ts-node",
-     "coffeescript": "coffee",
-     "scala": "scala",
-     "swift": "swift",
-     "julia": "julia",
-     "crystal": "crystal",
-     "ocaml": "ocaml",
-     "r": "Rscript",
-     "applescript": "osascript",
-     "clojure": "lein exec",
-     "haxe": "haxe --cwd $dirWithoutTrailingSlash --run $fileNameWithoutExt",
-     "rust": "cd $dir && rustc $fileName && $dir$fileNameWithoutExt",
-     "racket": "racket",
-     "ahk": "autohotkey",
-     "autoit": "autoit3",
-     "kotlin": "cd $dir && kotlinc $fileName -include-runtime -d $fileNameWithoutExt.jar && java -jar $fileNameWithoutExt.jar",
-     "dart": "dart",
-     "pascal": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
-     "d": "cd $dir && dmd $fileName && $dir$fileNameWithoutExt",
-     "haskell": "runhaskell",
-     "nim": "nim compile --verbosity:0 --hints:off --run"
-},
-"files.associations": {
+  "code-runner.executorMap": {
+    "javascript": "nodejs",
+    "java": "cd $dir && javac $fileName && java $fileNameWithoutExt",
+    "c": "cd $dir && gcc -g \"$fileName\" -o \"$fileNameWithoutExt\" && $dir\"$fileNameWithoutExt\"",
+    "cpp": "cd $dir && g++ -g \"$fileName\" -o \"$fileNameWithoutExt\" && $dir\"$fileNameWithoutExt\"",
+    "objective-c": "cd $dir && gcc -framework Cocoa $fileName -o $fileNameWithoutExt && $dir$fileNameWithoutExt",
+    "php": "php",
+    "python": "python3",
+    "perl": "perl",
+    "ruby": "ruby",
+    "go": "go run",
+    "lua": "lua",
+    "groovy": "groovy",
+    "powershell": "powershell -ExecutionPolicy ByPass -File",
+    "bat": "cmd /c",
+    "shellscript": "bash",
+    "fsharp": "fsi",
+    "csharp": "scriptcs",
+    "vbscript": "cscript //Nologo",
+    "typescript": "ts-node",
+    "coffeescript": "coffee",
+    "scala": "scala",
+    "swift": "swift",
+    "julia": "julia",
+    "crystal": "crystal",
+    "ocaml": "ocaml",
+    "r": "Rscript",
+    "applescript": "osascript",
+    "clojure": "lein exec",
+    "haxe": "haxe --cwd $dirWithoutTrailingSlash --run $fileNameWithoutExt",
+    "rust": "cd $dir && rustc $fileName && $dir$fileNameWithoutExt",
+    "racket": "racket",
+    "ahk": "autohotkey",
+    "autoit": "autoit3",
+    "kotlin": "cd $dir && kotlinc $fileName -include-runtime -d $fileNameWithoutExt.jar && java -jar $fileNameWithoutExt.jar",
+    "dart": "dart",
+    "pascal": "cd $dir && fpc $fileName && $dir$fileNameWithoutExt",
+    "d": "cd $dir && dmd $fileName && $dir$fileNameWithoutExt",
+    "haskell": "runhaskell",
+    "nim": "nim compile --verbosity:0 --hints:off --run"
+  },
+  "files.associations": {
     "array": "cpp",
     "atomic": "cpp",
     "bit": "cpp",
@@ -99,5 +98,20 @@
     "stop_token": "cpp",
     "thread": "cpp",
     "sstream": "cpp"
+  },
+  "C_Cpp_Runner.warnings": [],
+  "C_Cpp_Runner.compilerArgs": [],
+  "C_Cpp_Runner.includePaths": [
+    "/usr/include"
+  ],
+  "C_Cpp_Runner.linkerArgs": [],
+  "C_Cpp_Runner.cStandard": "gnu17",
+  "C_Cpp_Runner.cppStandard": "c++17",
+  "C_Cpp_Runner.excludeSearch": [],
+  "C_Cpp_Runner.enableWarnings": true,
+  "C_Cpp_Runner.warningsAsError": false,
+  "C_Cpp_Runner.cCompilerPath": "/usr/bin/gcc",
+  "C_Cpp_Runner.cppCompilerPath": "/usr/bin/g++",
+  "C_Cpp_Runner.debuggerPath": "/usr/bin/gdb",
+  "C_Cpp_Runner.makePath": "/usr/bin/make"
 }
- }
