--- a/Network/.vscode/settings.json
+++ b/Network/.vscode/settings.json
@@ -97,7 +97,11 @@
     "fstream": "cpp",
     "stop_token": "cpp",
     "thread": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "condition_variable": "cpp",
+    "csignal": "cpp",
+    "future": "cpp",
+    "mutex": "cpp"
   },
   "C_Cpp_Runner.warnings": [],
   "C_Cpp_Runner.compilerArgs": [],
