--- a/Merg/.vscode/tasks.json
+++ b/Merg/.vscode/tasks.json
@@ -21,7 +21,7 @@
         {
             "label": "preLaunch",
             "dependsOn": [
-                "runProjekt"
+                "makeProject"
             ]
         },
     ]
