--- a/Merg/.vscode/launch.json
+++ b/Merg/.vscode/launch.json
@@ -2,7 +2,7 @@
     "version": "0.2.0",
     "configurations": [
         {
-            "name": "(gdb) Launch",
+            "name": "(gdb) DebugAndRebuild",
             "type": "cppdbg",
             "request": "launch",
             "program": "${workspaceFolder}/Robot",
@@ -14,7 +14,26 @@
             "MIMode": "gdb",
             "miDebuggerPath": "/usr/bin/gdb",
             "preLaunchTask": "preLaunch",
-            //"postDebugTask": "makeClean",
+            "setupCommands": [
+                {
+                    "description": "Enable pretty-printing for gdb",
+                    "text": "-enable-pretty-printing",
+                    "ignoreFailures": true
+                }
+            ]
+        },
+        {
+            "name": "(gdb) DebugOnly",
+            "type": "cppdbg",
+            "request": "launch",
+            "program": "${workspaceFolder}/Robot",
+            "args": [],
+            "stopAtEntry": false,
+            "cwd": "${workspaceFolder}",
+            "environment": [],
+            "externalConsole": false,
+            "MIMode": "gdb",
+            "miDebuggerPath": "/usr/bin/gdb",
             "setupCommands": [
                 {
                     "description": "Enable pretty-printing for gdb",
@@ -25,4 +44,3 @@
         }
       ]
     }
-    
