--- a/Merg/.vscode/settings.json
+++ b/Merg/.vscode/settings.json
@@ -124,5 +124,9 @@
   "C_Cpp_Runner.cCompilerPath": "/usr/bin/gcc",
   "C_Cpp_Runner.cppCompilerPath": "/usr/bin/g++",
   "C_Cpp_Runner.debuggerPath": "/usr/bin/gdb",
-  "C_Cpp_Runner.makePath": "/usr/bin/make"
+  "C_Cpp_Runner.makePath": "/usr/bin/make",
+  "launches": {
+    "ReBuild": "(gdb) DebugAndRebuild (Merg)",
+    "RunWithoutBuild":"(gdb) DebugOnly (Merg)"
+  }
 }
